# simple-map-demo

./: .gitignore  AGENT.md  AGENTS.md  DEVLOG.md  eslint.config.mjs  index.html  package-lock.json  package.json  test.js  vite.config.mjs
.github/workflows/: build-exe.yml
amap-map/: app.js  index.html  route-drawer.js  style.css
baidu-map/: app.js  index.html  route-drawer.js
google-map/: app.js  index.html  style.css
scripts/: build-static.mjs
shared/: common.css  google-provider.js  home.js  i18n.js  utils.js
shared/locales/: en-US.json  zh-CN.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
